fixed cropping bug

--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -131,6 +131,7 @@ highlight a
 
 .singleHolder
   height 600px
+  background url('https://s3-eu-west-1.amazonaws.com/paddystaging/loading.gif') 50% 50% no-repeat
  
 .cloudinary_fileupload
   color transparent
@@ -149,7 +150,8 @@ highlight a
   background url('https://s3-eu-west-1.amazonaws.com/paddystaging/loading.gif') 50% 50% no-repeat 
   
 .centerIll
-  height 350px
+  height 300px
+  width 300px
   overflow hidden
     
 .uploader-panel
@@ -179,8 +181,11 @@ maxImage()
 .multipleIll
   position relative
   opacity 0
+  max-width 100%
+
+.uploadImage
   max-heigth 100%
-  width 100%
+  max-width 100%
 
 .singleIll
   position relative
@@ -218,12 +223,13 @@ maxImage()
  right 5
  top 5
  
+ .remove-image
+   width 33%
+ 
 .remove-image figure
-  width 300px
-  height 300px
-  overflow: hidden;
+  width 100%
+  height 100%
   position: relative;
-  padding-top 10px
  
 .remove-image figcaption
   background rgba(0,0,0,0.8)
@@ -235,9 +241,8 @@ maxImage()
   opacity 0
   position absolute
   z-index 100
-  font-size 1.5em
-  width 300px
-  height 300px
+  width 100%
+  height 225px
 
 .remove-image p
   cursor pointer
@@ -266,8 +271,9 @@ maxImage()
   font-size 3.5em
 
 .cropper
-  margin 0 auto
-  padding-top 70px
+  position relative
+  max-height 100%
+  max-width 100%
 
 .closure
   position absolute
@@ -281,7 +287,8 @@ maxImage()
 
 .crop-controls
   margin 0 auto
-  padding-top 10px
+  position relative
+  padding-top 80px
   width 100%
 
 .crop-control
@@ -330,7 +337,7 @@ maxImage()
   outline none
 
 
-.dropDownCropList select
+.dropDownCropList input
   background-color #FF3C77
   color white
   border none
@@ -340,9 +347,30 @@ maxImage()
   width 150px
   height 30px
   outline none
+  
+  &::-webkit-input-placeholder
+   color white
+   
+  &:-moz-placeholder  /* Firefox 18- */
+    color white
+
+  &::-moz-placeholder   /* Firefox 19+ */
+   color white
+
+  &:-ms-input-placeholder  
+   color white
 
 .cropPrev
   margin-bottom 300px !important
 
 .mog
   text-align right
+
+.modalImageWrapper
+  position relative
+  margin 0 auto
+  padding-top 70px
+  height 360px
+  width 360px
+  background url('https://s3-eu-west-1.amazonaws.com/paddystaging/loading.gif') 40% 50% no-repeat
+
